Add URL field in DESCRIPTION.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     knitr,
     xaringanthemer (>= 0.2.0),
     icon (>= 0.1.0)
-Remotes:  
+Remotes: 
     gadenbuie/xaringanthemer,
     ropenscilabs/icon
+URL: https://github.com/hongyuanjia/eplusrIntro
