Fix eplusr installation in CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,8 @@ env:
   global:
   - _R_CHECK_FORCE_SUGGESTS_=false
   - MAKEFLAGS="-j 2"
+
+addons:
+  apt:
+    packages:
+      - libudunits2-dev
