--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Imports:
     xaringan,
     knitr,
     xaringanthemer (>= 0.2.0),
-    fontawesome (>= 0.1.0),
-    here
+    fontawesome (>= 0.1.0)
 Remotes:
     gadenbuie/xaringanthemer,
     rstudio/fontawesome
