--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     xaringan,
     knitr,
     xaringanthemer (>= 0.2.0),
-    icon (>= 0.1.0)
+    icon (>= 0.1.0),
+    curl
 Remotes: 
     gadenbuie/xaringanthemer,
     ropenscilabs/icon
