--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     xaringanthemer (>= 0.2.0),
     icon (>= 0.1.0),
     curl
-Remotes: 
+Remotes:
+    hongyuanjia/eplusr,
     gadenbuie/xaringanthemer,
     ropenscilabs/icon
 URL: https://github.com/hongyuanjia/eplusrIntro
