Complete basic usage.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,4 @@ Remotes:
     gadenbuie/xaringanthemer,
     ropenscilabs/icon
 URL: https://github.com/hongyuanjia/eplusrIntro
+RoxygenNote: 6.1.1
