Complete most parts.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,9 @@ Imports:
     knitr,
     xaringanthemer (>= 0.2.0),
     icon (>= 0.1.0),
-    curl
-    tidyverse
+    curl,
+    purrr,
+    ggplot2
 Remotes:
     hongyuanjia/eplusr,
     gadenbuie/xaringanthemer,
